/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id 'java-library'
    id "com.gradleup.shadow" version "8.3.5"
    id 'application'
}

repositories {
    maven {
        url = uri('https://repo.maven.apache.org/maven2/')
    }
}

var log4j="2.24.2"
var jgrapht = "1.5.2"

dependencies {
    // https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api
    api("org.apache.logging.log4j:log4j-api:$log4j")
    // https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core
    runtimeOnly("org.apache.logging.log4j:log4j-core:$log4j")
    runtimeOnly("org.apache.logging.log4j:log4j-layout-template-json:$log4j")

    implementation 'org.apache.commons:commons-csv:1.10.0'

    implementation files("lib/antlr-3.4.jar")
    api files("lib/de.ovgu.featureide.lib.fm.attributes-v3.9.2.jar")
    api files("lib/de.ovgu.featureide.lib.fm-v3.9.2.jar")
    implementation files("lib/org.sat4j.core.jar")
    implementation files("lib/uvl-parser.jar")


    // https://mvnrepository.com/artifact/org.jgrapht/jgrapht-core
    implementation("org.jgrapht:jgrapht-core:$jgrapht")
}

group = 'org.collection.fm'
version = '1.0-SNAPSHOT'
description = 'batchanalysis'
java.sourceCompatibility = JavaVersion.VERSION_21

application {
    mainClass = 'org.collection.fm.FeatureStepAnalysis'
}

jar {
    manifest {
        attributes 'Main-Class': 'org.collection.fm.FeatureStepAnalysis'
    }
}